# signspeak

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
benchmarks/: latency.py
configs/: default.yaml
data/: CONTRIBUTORS.md  VOCABULARY.md
docs/: ARCHITECTURE.md  COMPETITIVE_ANALYSIS.md  DATA_GUIDELINES.md  EVALUATION.md  PRD.md  REQUIREMENTS.md  ROADMAP.md  RULES.md
src/signspeak/: __init__.py  augment.py  capture.py  config.py  diagnostics.py  dynamic.py  evaluate.py  features.py  holistic.py  landmarks.py  predict.py  sentence.py  sequences.py  stt.py  training.py  tts.py
src/signspeak/cli/: __init__.py  collect.py  evaluate.py  live.py  record_seq.py  track.py  train.py
tests/: conftest.py  test_augment.py  test_diagnostics.py  test_dynamic.py  test_evaluate.py  test_features.py  test_holistic_features.py  test_sentence.py  test_sequences.py  test_stt.py  test_training.py  test_tts.py
