[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "signspeak"
version = "0.1.0"
description = "Real-time Indian Sign Language -> text -> speech translator"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "opencv-python>=4.9",
    "mediapipe==0.10.14",
    "numpy>=1.24,<2",
    "pandas>=2.0",
    "scikit-learn>=1.4",
    "joblib>=1.3",
    "pyttsx3>=2.90",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "pre-commit>=3.5",
]
dynamic = ["tensorflow>=2.16"]
online = ["edge-tts>=6.1"]
stt = ["vosk>=0.3.45", "sounddevice>=0.4"]

[project.scripts]
signspeak-track = "signspeak.cli.track:main"
signspeak-collect = "signspeak.cli.collect:main"
signspeak-train = "signspeak.cli.train:main"
signspeak-evaluate = "signspeak.cli.evaluate:main"
signspeak-live = "signspeak.cli.live:main"
signspeak-record-seq = "signspeak.cli.record_seq:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
src = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
